# linux-computer-use

./: LICENSE  README.md  product-hunt-submission.md  pyproject.toml
assets/: live_coverage.json  smoke_output.txt
docs/: agent-native-linux-workstation-demo.md  agent-native-linux-workstation-roadmap.md
scripts/: demo_agent_native_workstation.py  live_coverage.py  record_demo.sh
src/linux_computer_use/: __init__.py  cli.py  driver.py  server.py
tests/: test_driver.py
